Stylised the cards, added correct spacing to left menu, set-up basic layout for right hand side.

--- a/styles.css
+++ b/styles.css
@@ -11,7 +11,7 @@ body {
 .left {
     display: grid;
     grid-template-columns: 40px 1fr;
-    grid-template-rows: repeat(10, 40px);
+    grid-template-rows: 80px repeat(4, 40px) 80px repeat(4, 40px);
     row-gap: 10px;
     background-color: #4f46e5;
     color: white;
@@ -50,7 +50,8 @@ body {
 .projects {
     display: grid;
     grid-template-columns: 1fr 1fr;
-    gap: 15px;
+    grid-template-rows: 20px 1fr 1fr 1fr 20px;
+    row-gap: 15px;
     place-items: center;
     align-items: stretch;
     justify-items: stretch;
@@ -163,10 +164,12 @@ button:hover {
 .card {
     display: grid;
     grid-template-rows: 30px 1fr;
-    background-color: #a5b4fc;
-    border:#4f46e5 solid 2px;
+    background-color: white;
+    border-left: orange solid 10px;
+    border-left-style: outset;
     border-radius: 4px;
-    margin: 0px 20px 0px 20px;
+    margin: 0px 10px 0px 10px;
+    box-shadow: 3px 3px 2px 1px #a78bfa;
 }
 
 .card-heading {
@@ -181,21 +184,50 @@ button:hover {
 .announcements {
     display: grid;
     grid-template-rows: repeat(3, 50px);
-    row-gap: 10px;
+    background-color: white;
+    margin-bottom: 100px;
+    border: 2px solid black;
+    border-radius: 20px;
+    margin-right: 20px;
+    text-align:  center;
+    position: relative;
+    top: 30px;
 }
 
 .announcement {
-    border:#000000 solid 2px;
+    border-bottom:#000000 dashed 2px;
+}
+
+.bottom-announcement {
+    border: none;
 }
 
 .trending {
     display: grid;
     grid-template-rows: 1fr 1fr 1fr 1fr;
-    row-gap: 10px;
+    position: relative;
+    bottom: 30px;
+    border: black solid 2px;
+    border-radius: 20px;
+    background-color: white;
+    margin-right: 20px;
 }
 
 .trend {
-    border: black solid 2px;
+    font-weight: bold;
+    font-size: large;
+    border-bottom: 2px dashed black;
+}
+
+.bottom-trend {
+    border: none;
+}
+
+.project-title {
+    position: relative;
+    left: 10px;
+    top: 5px;
+    font-weight: bold;
 }
 
 
